[gd_scene load_steps=17 format=3 uid="uid://dxywrktfu03o7"]

[ext_resource type="Theme" uid="uid://ea3c2pcwief3" path="res://materials/ui/default_theme.tres" id="1_bw11h"]
[ext_resource type="Script" path="res://nodes/ui/options/graphics/graphic_options.gd" id="1_hieft"]
[ext_resource type="Shader" path="res://nodes/ui/options/shaders/blur/blur.gdshader" id="2_6tdcw"]
[ext_resource type="Texture2D" uid="uid://eo2rapj0sp8w" path="res://sprites/ui/graphics/camera_none.svg" id="2_ws774"]
[ext_resource type="Texture2D" uid="uid://gxw2ba5r1pwn" path="res://sprites/ui/graphics/camera_scanlines.svg" id="3_m6ut0"]
[ext_resource type="Texture2D" uid="uid://c8v52tttrny00" path="res://sprites/ui/graphics/camera_grainy.svg" id="4_at4af"]
[ext_resource type="Texture2D" uid="uid://cfhnige3uu62f" path="res://sprites/ui/graphics/camera_grayscale.svg" id="5_61it7"]
[ext_resource type="Texture2D" uid="uid://cm6djegx0af52" path="res://sprites/ui/graphics/camera_midnight.svg" id="6_ixnde"]
[ext_resource type="Texture2D" uid="uid://ch47b8c3y6duu" path="res://sprites/ui/graphics/camera_cozy.svg" id="7_2laxc"]
[ext_resource type="StyleBox" uid="uid://cfhx1hummvka1" path="res://materials/ui/button_default.tres" id="13_s78mh"]
[ext_resource type="StyleBox" uid="uid://cj7yyf8s2vc5" path="res://materials/ui/button_focus.tres" id="14_ltqhi"]
[ext_resource type="Texture2D" uid="uid://c4h43uifrswdi" path="res://sprites/ui/option_exit.png" id="14_noh61"]
[ext_resource type="PackedScene" uid="uid://cwbjqarq383ll" path="res://nodes/ui/options/buttons/camera_filter_button.tscn" id="16_ifln2"]

[sub_resource type="Gradient" id="Gradient_0p3cd"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.709804, 0.823529, 0.772549, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_g285w"]
gradient = SubResource("Gradient_0p3cd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ypj13"]
shader = ExtResource("2_6tdcw")
shader_parameter/blur = 2.0

[node name="GraphicOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hieft")

[node name="BackgorundColor" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(640, 360)
scale = Vector2(5.125, 752)
texture = SubResource("GradientTexture1D_g285w")

[node name="Blur" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ypj13")
position = Vector2(640, 360)
scale = Vector2(5, 720)
texture = SubResource("GradientTexture1D_g285w")

[node name="GraphicOptionsTitle" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 1280.0
offset_bottom = 144.0
theme = ExtResource("1_bw11h")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[center] Graphic options [/center]"

[node name="CameraEffectTitle" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 160.0
offset_right = 1024.0
offset_bottom = 192.0
theme = ExtResource("1_bw11h")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Camera effect:"

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="NoEffectButton" parent="Buttons" instance=ExtResource("16_ifln2")]
layout_mode = 0
offset_left = 240.0
offset_top = 208.0
offset_right = 416.0
offset_bottom = 368.0
label = "none"
texture = ExtResource("2_ws774")

[node name="ScanlinesEffectButton" parent="Buttons" instance=ExtResource("16_ifln2")]
layout_mode = 0
offset_left = 448.0
offset_top = 208.0
offset_right = 624.0
offset_bottom = 368.0
label = "scanlines"
texture = ExtResource("3_m6ut0")

[node name="GrainyEffectButton" parent="Buttons" instance=ExtResource("16_ifln2")]
layout_mode = 0
offset_left = 656.0
offset_top = 208.0
offset_right = 832.0
offset_bottom = 368.0
label = "grainy"
texture = ExtResource("4_at4af")

[node name="GrayscaleEffectButton" parent="Buttons" instance=ExtResource("16_ifln2")]
layout_mode = 0
offset_left = 864.0
offset_top = 208.0
offset_right = 1040.0
offset_bottom = 368.0
label = "grayscale"
texture = ExtResource("5_61it7")

[node name="MidnightEffectButton" parent="Buttons" instance=ExtResource("16_ifln2")]
layout_mode = 0
offset_left = 240.0
offset_top = 416.0
offset_right = 416.0
offset_bottom = 576.0
label = "midnight"
texture = ExtResource("6_ixnde")

[node name="CozyEffectButton" parent="Buttons" instance=ExtResource("16_ifln2")]
layout_mode = 0
offset_left = 448.0
offset_top = 416.0
offset_right = 624.0
offset_bottom = 576.0
label = "cozy"
texture = ExtResource("7_2laxc")

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.075
anchor_bottom = 0.022
offset_left = 592.0
offset_top = 624.0
offset_right = 560.0
offset_bottom = 661.16
theme_override_styles/normal = ExtResource("13_s78mh")
theme_override_styles/hover = ExtResource("14_ltqhi")
theme_override_styles/pressed = ExtResource("14_ltqhi")
theme_override_styles/focus = ExtResource("14_ltqhi")
icon = ExtResource("14_noh61")
